# realtime-ml-system

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
dashboards/: candles.json
deployments/dev/candles/: candles-d.yaml
deployments/dev/candles_historical/: candles_historical-d.yaml
deployments/dev/candles_live/: candles_live-d.yaml
deployments/dev/kind/: create_cluster.sh  install_grafana.sh  install_kafka_ui.sh  install_mlflow.sh  kind-with-portmapping.yaml
deployments/dev/kind/manifests/: grafana-dashboards-configmap.yaml  grafana-values.yaml
deployments/dev/predictions_live/: kustomization.yaml  predictions_live-cm.yaml  predictions_live-d.yaml
deployments/dev/predictions_training/: kustomization.yaml  predictions-training-cm.yaml  predictions-training-j.yaml  predictions_training-d.yaml
deployments/dev/technical_indicators/: technical_indicators-d.yaml
deployments/dev/technical_indicators_historical/: technical_indicators_historical-d.yaml
deployments/dev/technical_indicators_live/: technical_indicators_live-d.yaml
deployments/dev/technical_indicators_old/: technical_indicators-d.yaml
deployments/dev/trades/: trades-d.yaml
deployments/dev/trades_historical/: trades_historical-d.yaml
deployments/dev/trades_live/: trades_live-d.yaml
deployments/prod/technical_indicators/: technical_indicators-d.yaml
deployments/prod/trades/: trades-d.yaml
docker/: candles.Dockerfile  predictions-live.Dockerfile  predictions-training.Dockerfile  predictions.Dockerfile  technical_indicators.Dockerfile  trades.Dockerfile  training-pipeline.Dockerfile
scripts/: build-and-push-image.sh  deploy.sh  shutdown.sh
services/candles/: README.md  pyproject.toml
services/candles/src/candles/: __init__.py  main.py
services/candles/src/candles/config/: .env.development  .env.production  .env.staging  config.py  local.env  validators.py
services/candles/src/candles/models/: __init__.py  candle.py  exceptions.py  trade.py
services/predictions/: README.md  pyproject.toml  todo.md
services/predictions/src/predictions/: __init__.py  config.py  data_validation.py  debug.py  main.py  ml_models.py  model_registry.py  model_validation.py  predict.py  train.py
services/predictions/src/predictions/config/: __init__.py  config.py  local.env  validators.py
services/predictions/src/predictions/core/: __init__.py  models.py  registry.py  validation.py
services/predictions/src/predictions/models/: __init__.py  exceptions.py  prediction.py
services/predictions/src/predictions/models_old/: __init__.py
services/predictions/src/predictions/utils/: __init__.py  constants.py  profiling.py  streaming.py
services/technical_indicators/: README.md  pyproject.toml  technical_indicators_todo.md
services/technical_indicators/src/technical_indicators/: __init__.py  candle.py  indicators.py  main.py  table.py
services/technical_indicators/src/technical_indicators/config/: config.py  local.env
services/technical_indicators/src/technical_indicators/models/: __init__.py  exceptions.py  technical_indicator.py
services/technical_indicators/technical_indicators/src/technical_indicators/: __init__.py
services/trades/: README.md  pyproject.toml
services/trades/src/trades/: __init__.py  kraken_rest_api.py  kraken_websocket_api.py  main.py
services/trades/src/trades/config/: .env.staging  __init__.py  config.py  development.env  local.env  production.env  validators.py
services/trades/src/trades/models/: __init__.py  trade.py
