[project]
name = "predictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WilliamJudge94", email = "37912237+WilliamJudge94@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
predictions = "predictions:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
