[project]
name = "predictions"
version = "0.1.0"
description = "Machine learning predictions service for real-time ML trading system"
readme = "README.md"
authors = [
    { name = "WilliamJudge94", email = "37912237+WilliamJudge94@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "quixstreams>=3.22.0",
    "risingwave-py>=0.0.2",
]

[project.scripts]
predictions = "predictions:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
